--- a/package.json
+++ b/package.json
@@ -21,51 +21,50 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@dotenvx/dotenvx": "1.51.0",
-    "@formkit/tempo": "0.1.2",
+    "@dotenvx/dotenvx": "1.51.4",
+    "@formkit/tempo": "1.0.0",
     "@google-cloud/storage": "7.17.1",
     "argon2": "0.44.0",
     "axios": "1.13.2",
-    "better-auth": "1.3.34",
     "cors": "2.8.5",
     "dotenv": "17.2.3",
-    "express": "5.1.0",
+    "express": "5.2.1",
     "express-rate-limit": "8.2.1",
-    "express-slow-down": "3.0.0",
-    "express-validator": "7.3.0",
+    "express-slow-down": "3.0.1",
+    "express-validator": "7.3.1",
     "google-auth-library": "10.5.0",
-    "googleapis": "161.0.0",
+    "googleapis": "166.0.0",
     "handlebars": "4.7.8",
     "helmet": "8.1.0",
-    "jsonwebtoken": "9.0.2",
+    "jsonwebtoken": "9.0.3",
     "morgan": "1.10.1",
-    "mssql": "12.0.0",
+    "mssql": "12.2.0",
     "multer": "2.0.2",
-    "nodemailer": "7.0.10",
+    "nodemailer": "7.0.12",
     "qrcode": "1.5.4",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
     "time2fa": "1.4.2",
-    "ws": "^8.18.3",
+    "ws": "8.19.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "@types/compression": "1.8.1",
     "@types/cors": "2.8.19",
-    "@types/express": "5.0.5",
+    "@types/express": "5.0.6",
     "@types/jsonwebtoken": "9.0.10",
     "@types/morgan": "1.9.10",
     "@types/mssql": "9.1.8",
     "@types/multer": "2.0.0",
-    "@types/node": "24.10.0",
+    "@types/node": "25.0.10",
     "@types/nodemailer": "7.0.3",
     "@types/qrcode": "1.5.6",
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.8",
-    "@types/ws": "^8.18.1",
+    "@types/ws": "8.18.1",
     "compression": "1.8.1",
     "prettierrc": "0.0.0-5",
-    "tsx": "4.20.6",
+    "tsx": "4.21.0",
     "typescript": "5.9.3"
   },
   "engines": {
